<resources>
    <string name="app_name">KRAJ</string>
    <string name="text1">The Full Moon in January is called the Wolf Moon. It is named after the hungry packs of wolves that howled at night. The Algonquian tribes of Native Americans had many different names for the Full Moon through the year, reflecting their connection with nature and the seasons, hunting, fishing, and farming.</string>
    <string name="text2">In ancient times, Chinese people believed that there were twelve Moons as there were twelve months in one year. It was believed that the Moons were made of water. The name mother of moons is associated with that of Heng-o. This image shows the detail of an eighteen-century embroidered emperor\'s robe including a white hare, which was believed to have lived in the moon.</string>
    <string name="text3">Anningan is the name of the Moon god of some of the Inuit people that live in Greenland. Anningan chases his sister, Malina, the Sun goddess, across the sky, but forgets to eat, so he gets much thinner. This is symbolic of the phases of the moon, particularly the crescent.</string>
    <string name="text4">Ix Chel, the Lady Rainbow, was the old Moon goddess in Maya mythology. Ix Chel was depicted as an old woman wearing a skirt with crossed bones, and she had a serpent in her hand. She also had a kinder side and was worshiped as the protector of weavers and women in childbirth.</string>
    <string name="text5">Coyolxauhqui was the Moon goddess according the Aztec mythology. The image above reproduces The Coyolxauhqui Stone, a giant monolith found at the Great Temple of Tenochtitlan.</string>
    <string name="text6">The Moon is the Earth’s only natural satellite. A natural satellite is a space body that orbits a planet, a planet like object or an asteroid. It is the fifth largest moon in the Solar System.</string>
    <string name="fun_facts1">Apollo 11 was the first spaceflight that landed humans on the Moon. It launched on July 16 1969 along with Neil Armstrong, Buzz Aldrin and Michael Collins. The rocket that propelled the crew on this flight to the moon still remains the tallest and heaviest ever built. On July 20, Armstrong and Aldrin landed the Lunar Module Eagle on the Moon\'s Sea of Tranquility. The moment when Armstrong put his left foot down on the rocky plain was watched live by the largest television audience in recorded history. Michael Collins remained in orbit in the command module conducting scientific experiments and taking photographs. Armstrong and Aldrin \"moon walked\" for three hours setting up scientific instruments and collecting soil and rock samples. The astronauts reported that the moon had a distinct smell which they described as ‘spent gunpowder’ and ‘wet ashes’. On the surface, the crew had to get used to the reduced gravity. They could jump very high compared to on Earth. They also planted an American flag in the lunar soil and left a plaque commerating man\'s landing on the Moon. The crew spend a total of two and a half hours on the moon\'s surface. The first drink consumed on the moon was wine.</string>
    <string name="fun_facts2">Apollo 12</string>
    <string name="fun_facts3">Apollo 13</string>
    <string name="but">GO BACK</string>
    <string name="apollo_11">Apollo 11</string>
    <string name="Apollo11_1">Apollo 11 was the first spaceflight that landed humans on the Moon. It launched on July 16 1969 along with Neil Armstrong, Buzz Aldrin and Michael Collins. The rocket that propelled the crew on this flight to the moon still remains the tallest and heaviest ever built.</string>
    <string name="Apollo11_2">On July 20, Armstrong and Aldrin landed the Lunar Module Eagle on the Moon\'s Sea of Tranquility. The moment when Armstrong put his left foot down on the rocky plain was watched live by the largest television audience in recorded history. Michael Collins remained in orbit in the command module conducting scientific experiments and taking photographs. Armstrong and Aldrin moon walked for three hours setting up scientific instruments and collecting soil and rock samples. The astronauts reported that the moon had a distinct smell which they described as ‘spent gunpowder’ and ‘wet ashes’. On the surface, the crew had to get used to the reduced gravity. They could jump very high compared to on Earth. They also planted an American flag in the lunar soil and left a plaque commerating man\'s landing on the Moon. The crew spend a total of two and a half hours on the moon\'s surface. The first drink consumed on the moon was wine.</string>
    <string name="Apollo11_3">The Command Module Columbia returned to Earth on July 24, 1969. Apollo 11 had successfully completed its mission.</string>
    <string name="Apollo11_4">Footprints left on the Moon by the Apollo 11 astronauts will still be visible to Moon visitors 1 million years from now!</string>
    <string name="Apollo11_5">Shepard had a small gotcha for the television audience watching them just before Apollo 14 prepared to head home. He had brought a six-iron with him to the moon as well as a little white pellet that\'s familiar to millions of Americans.In front of the camera, he hit one ball into a nearby crater and a second one that went miles and miles and miles!</string>
    <string name="Apollo11_6">Apollo 14 splashed down on Earth Feb. 9. After the ruckus Apollo 13 caused, Apollo 14 helped the program regain its confidence ahead of the most challenging missions yet: those with a lunar rover.</string>
    <string name="apollo_12">Apollo 12</string>
    <string name="apollo_14">Apollo 14</string>
    <string name="apollo_14_1">Commander Alan Shepard, Command Module Pilot Stuart Roosa, and Lunar Module Pilot Edgar Mitchell launched on their nine-day mission on January 31, 1971, with high hopes following the near-disaster that was the previous mission. This fourth manned moon shot is most famous as the mission where an astronaut played golf, but there were other adventures the crew encountered along the way. They searched for evidence of an asteroid that carved a large crater in the moon, and fought glitches and false alarms as they made their way to the Fra Mauro highland.</string>
    <string name="apollo_14_2">Apollo 14 launched smoothly, aiming for the Fra Mauro highlands that Apollo 13 had hoped to reach. The astronauts ran into trouble as they were preparing to leave Earth orbit. However, everything turmed out well eventually. To help them carry more rocks and equipment, for the first time the crew had a small handcart that they carefully wheeled around the surface. Sixty-nine miles above Mitchell and Shepard, Roosa took pictures of the moon, working through his assigned list of scientific targets.</string>
    <string name="apollo_14_3">Apollo 14\'s prime geologic target was Cone Crater. The crew planned to climb the slope, reach the rim — which was 300 feet (91 meters) above the landing site — and then look for rocks that could have flown up from the moon\'s bedrock after a meteor smashed into the surface millions of years before.</string>
    <string name="apollo_14_4">The astronauts found the climb harder than expected. Rocks littering the slope forced them to carry the cart, and the steep climb meant they had to rest often. Eventually they ran out of time and needed to move on. When the pictures were analyzed later, geologists estimated the astronauts missed the rim by a mere 100 feet.</string>
    <string name="apollo_14_5">Shepard had a small gotcha for the television audience watching them just before Apollo 14 prepared to head home. He had brought a six-iron with him to the moon as well as a little white pellet that\'s familiar to millions of Americans.In front of the camera, he hit one ball into a nearby crater and a second one that went miles and miles and miles!</string>
    <string name="apollo_14_6">Apollo 14 splashed down on Earth Feb. 9. After the ruckus Apollo 13 caused, Apollo 14 helped the program regain its confidence ahead of the most challenging missions yet: those with a lunar rover.</string>
    <string name="apollo_17">Apollo 17 (AS-512)</string>
    <string name="apollo_17_1">The Last Manned Lunar Landing</string>
    <string name="apollo_17_2">Apollo 17 was the last Apollo mission to land men on the Moon. It carried the only trained geologist to walk on the lunar surface, lunar module pilot Harrison Schmitt. Fe, Fi, Fo, Fum and Phooey were the five astro-mice that accompanied the crew of Apollo 17. The astronauts spent 75 hours on the Moon. They spent 22 hours outside the vehicle on the lunar surface.Overall, the Apollo 17 mission had a duration of 12.6 days, and a time on the lunar surface of 75 hr with a total surface traverse distance of approximately 35 km. Lunar samples were collected at 22 locations in the Taurus-Littrow Valley region. Also, the astronauts collected 741 individual rock and soil samples with a total mass of 111 kilograms.</string>
    <string name="apollo_17_3">Scientific objectives included geological surveying and sampling of materials and surface features in a preselected area of the Taurus-Littrow region, deploying and activating surface experiments, and conducting inflight experiments and photographic tasks during lunar orbit and transearth coast.</string>
    <string name="apollo_17_4">Compared to previous Apollo missions, Apollo 17 astronauts traversed the greatest distance using the Lunar Roving Vehicle and returned the greatest amount of rock and soil samples. Eugene Cernan, commander of Apollo 17, still holds the distinction of being the last man to walk on the Moon, as no humans have visited the Moon since December 14, 1972.</string>
    <string name="apollo_17_5">The flag is still standing!!! Imagine that.</string>
    <string name="story_1">Story: 1</string>
    <string name="story_2">Story: 2</string>
    <string name="story_3">Story: 3</string>
    <string name="story_4">Story: 4</string>
    <string name="story_5">Story: 5</string>
    <string name="chang_e_and_hou_yi">Chang\'e and Hou Yi</string>
    <string name="ch_1">Long long ago, there were 10 suns in the sky. They burnt all the plants on the earth. People were dying.</string>
    <string name="ch_2">One day, a hero whose name was Hou Yi used his bow and arrows to shoot down nine of them. All the people on the earth were saved. One day, the queen of heaven gave Hou Yi a bottle elixir that could make Hou Yi become an immortal, but the elixir was only efficacious for one person. Hou Yi did want to become an immortal, but he wanted to stay with his beautiful wife Chang\'e more, so he didn\'t drink the elixir and asked his wife Chang\'e to keep it for him. Hou Yi was becoming more and more famous after he shot down the nine suns and more and more men wanted Hou Yi to be their master. Most of them were accepted by Hou Yi.</string>
    <string name="ch_3">Not every student of Hou Yi had good morality. Feng Meng, one of his students, wanted to seize his elixir. One day, Hou Yi went hunting with his students, but Feng Meng pretended to be ill and stay at home. When making sure Hou Yi had gone he went to Hou Yi\'s house and tried to force Chang\'e to give him the elixir. Chang\'e knew she couldn\'t defeat Feng Meng so she drank the elixir immediately. The elixir made her become an immortal and fly higher and higher. Finally, she stopped on the moon.</string>
    <string name="ch_4">From then on, people often pray to Chang\'e for fortune and safety. During the Mid-Autumn Festival they offer lots of foods to Chang\'e.</string>
    <string name="stories">Stories</string>
    <string name="fun_facts">FUN FACTS</string>
    <string name="gallery">Gallery</string>
    <string name="missions">Missions</string>
</resources>