<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dicoski.kraj.AndroidMain"
    android:background="@drawable/slika">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:text="@string/missions"
        android:id="@+id/MissionsButton"
        android:background="#FDD017"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:text="@string/gallery"
        android:id="@+id/GalleryButton"
        android:background="#4CC417"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:text="@string/fun_facts"
        android:id="@+id/FunFactButton"
        android:background="#3BB9FF"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/MissionsButton"
        android:layout_alignStart="@+id/MissionsButton" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:text="@string/stories"
        android:id="@+id/StoriesButton"
        android:background="#F52887"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_alignTop="@+id/FunFactButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
